plugins {
    id 'java'
}

group = 'com.cyrilng'
version = '1.0-SNAPSHOT'


repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform("org.junit:junit-bom:${rootProject.ext.junitBomVersion}")
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // https://mvnrepository.com/artifact/io.aeron/aeron-all
    implementation("io.aeron:aeron-all:1.49.2")
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation("org.slf4j:slf4j-api:${rootProject.ext.slf4jVersion}")
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
    testImplementation("org.slf4j:slf4j-simple:${rootProject.ext.slf4jVersion}")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    sourceCompatibility = JavaVersion.toVersion("25")
    targetCompatibility = JavaVersion.toVersion("25")
}

test {
    useJUnitPlatform()
}

tasks.named('test', Test) {
    jvmArgs(
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
            '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
            '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED'
    )
}